--- a/src/app.scss
+++ b/src/app.scss
@@ -1,20 +1,20 @@
+@import "./styles.scss";
 .grid-container {
   display: grid;
-  height: 100%;
-  grid-template-columns: 0fr 7fr;
-  grid-template-rows: auto;
+
+  grid-template-rows: 80px auto;
   grid-template-areas:
-    "nav header"
-    "nav app";
+    "headerarea"
+    "contentarea";
 }
 .header {
-  grid-area: header;
-}
-.nav {
-  grid-area: nav;
+  grid-area: headerarea;
+  margin-block-end: 0;
   margin-block-start: 0;
-  padding-inline-start: 0;
 }
-.content {
-  grid-area: app;
+
+.content-area {
+  grid-area: contentarea;
+  background: $content-background;
+  height: calc(100vh - 80px);
 }
