--- a/src/component/nav/popoutmenu/popoutmenu.scss
+++ b/src/component/nav/popoutmenu/popoutmenu.scss
@@ -4,17 +4,26 @@
   width: 0;
   z-index: 999;
   background: #333;
-  height: 100%;
+  height: 100vh;
+  position: absolute;
+  width: 15rem;
 
-  &-close-icon {
-    padding: 0.5rem;
-    text-align: end;
-  }
   &-children {
+    margin: 5rem 0;
     padding: 0 1rem;
   }
-  &-open {
-    width: 15rem;
+
+  &-open-appear {
+    width: 0;
+  }
+
+  &-icon {
+    margin: 10px;
+    z-index: 999999;
+    svg {
+      width: 2rem;
+      height: 2rem;
+    }
   }
   transition: width 0.2s ease-in-out;
 }
